01-02项目第二天提交，完成商城主页的分类导航、最新商品显示，热门商品显示，分类相应的商品页面显示以及商品详情页面的部分显示

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -15,4 +15,25 @@
            <url-pattern>/indexController</url-pattern>
        </servlet-mapping>
 
+       <servlet>
+           <servlet-name>ProductListController</servlet-name>
+           <servlet-class>cn.liuxi.web.ProductListController</servlet-class>
+       </servlet>
+
+       <servlet-mapping>
+           <servlet-name>ProductListController</servlet-name>
+           <url-pattern>/productListController</url-pattern>
+       </servlet-mapping>
+
+
+       <servlet>
+           <servlet-name>ProductDetailController</servlet-name>
+           <servlet-class>cn.liuxi.web.ProductDetailController</servlet-class>
+       </servlet>
+
+      <servlet-mapping>
+          <servlet-name>ProductDetailController</servlet-name>
+          <url-pattern>/productDetailController</url-pattern>
+      </servlet-mapping>
+
 </web-app>
