01-07项目第7次提交，完成后台的登录部分,订单管理，商品管理，分类管理，还缺少商品管理的修改功能。

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -75,5 +75,24 @@
         <url-pattern>/adminLoginController</url-pattern>
     </servlet-mapping>
 
+    <!--后台商品管理-->
+    <servlet>
+        <servlet-name>AdminAddProduct</servlet-name>
+        <servlet-class>cn.liuxi.wshopping.web.Servlet.AdminAddProduct</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AdminAddProduct</servlet-name>
+        <url-pattern>/adminAddProduct</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>AdminController</servlet-name>
+        <servlet-class>cn.liuxi.wshopping.web.Servlet.AdminController</servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>AdminController</servlet-name>
+        <url-pattern>/adminController</url-pattern>
+    </servlet-mapping>
 
 </web-app>
